# ubuntu_settings

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.alpine  Dockerfile.debian  Dockerfile.mihomo  FileManager_openinTerminal.desktop  docker-compose.yaml  setup.sh  test.sh  ubuntu_setup.sh  vale.ini
.github/: copilot-instructions.md
Templates/ros/: package.xml
Templates/vscode/: c_cpp_properties.json  settings.json
dotFiles/: .bashrc  .clangd  .condarc  .flake8  .tmux.conf  .vale.ini  .vimrc  .xsessionrc  .zshenv  .zshrc  ln.sh
dotFiles/.config/: starship.toml
dotFiles/.config/alacritty/: alacritty.toml  alacritty_windows.toml
dotFiles/.config/fresh/: config.json
dotFiles/.config/ghostty/: config.ghostty
dotFiles/.config/helix/: config.toml  language.toml
dotFiles/.config/kitty/: kitty.conf  kitty.conf.bak
dotFiles/.config/pip/: pip.conf
dotFiles/.config/proxy/: rules.yaml
dotFiles/.config/shell/: PATH.sh  PATH.zsh  alias.sh  alias.zsh  env.defer.zsh  env.sh  env.zsh  ohmyzsh.zsh  zinit.zsh
dotFiles/.config/tmux-powerline/: config.sh
dotFiles/.config/uv/: uv.toml
dotFiles/.config/wezterm/: wezterm.lua
dotFiles/.tmux/: .tmux.conf
dotFiles/Templates/cmake/: CMakeLists.txt
dotFiles/brew/: sync_brew_path
dotFiles/vale/: vale.ini
dot_files/: .clang-format  .cmake-format.yaml  .cmakelintrc  .tmux.conf
dot_files/vale/: vale.ini
sh/: bashrc.sh  dotfilesClient.sh  dotfilesClientDesktop.sh  dotfilesServer.sh  mkdir.sh
sh/desktop/: amdgpu_mesa.sh
sh/non-desktop/: aptinstall.sh  aptsource.sh
sh/sever/: openlist.sh
(+145 files in other folders)
